@@ -1,3 +1,8 @@
+2005-09-17 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b9
+
+        * Fix: Make changeToAlbum emails HTML-mails, so links work correctly.
+	  Thanks to Ansolom.
+
 2005-09-15 Jens Tkotz <jens@peino.de> 1.5.1-RC4-cvs-b8
 
 	* Fix: Typo.
